# MaMI --- NUMA Memory Interface
#
# Copyright (C) 2008, 2009, 2010, 2011  Centre National de la Recherche Scientifique
#
# MaMI is free software; you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation; either version 2.1 of the License, or (at
# your option) any later version.
#
# MaMI is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
#
# See the GNU Lesser General Public License in COPYING.LGPL for more details.

AM_CPPFLAGS = $(GLOBAL_AM_CPPFLAGS) $(INTERNAL_CPPFLAGS) -I$(abs_top_srcdir)/include
AM_CFLAGS   = $(GLOBAL_AM_CFLAGS)
AM_LDFLAGS  = $(GLOBAL_AM_LDFLAGS)
LDADD       = $(GLOBAL_AM_LDADD)


lib_LTLIBRARIES = libmami.la

libmami_la_SOURCES =
libmami_la_SOURCES +=	
libmami_la_SOURCES +=	mami_debug.c
libmami_la_SOURCES +=	mami_helper.c
libmami_la_SOURCES +=	mami.c
libmami_la_SOURCES +=	mami_fortran.c
libmami_la_SOURCES +=	mami_marcel.c
libmami_la_SOURCES +=	mami_sampling.c

